RESOLVED FIXED145311
[Mac] Device picker menu should be persistent
https://bugs.webkit.org/show_bug.cgi?id=145311
Summary [Mac] Device picker menu should be persistent
Eric Carlson
Reported 2015-05-22 11:17:13 PDT
Don't delete the device menu picker when the last client goes away because device selection should be persistent.
Attachments
Proposed patch. (13.07 KB, patch)
2015-05-22 11:29 PDT, Eric Carlson
no flags
Radar WebKit Bug Importer
Comment 1 2015-05-22 11:17:46 PDT
Eric Carlson
Comment 2 2015-05-22 11:29:26 PDT
Created attachment 253596 [details] Proposed patch.
WebKit Commit Bot
Comment 3 2015-05-22 11:32:06 PDT
Attachment 253596 [details] did not pass style-queue: ERROR: Source/WebCore/platform/graphics/avfoundation/objc/MediaPlaybackTargetPickerMac.mm:31: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Brent Fulgham
Comment 4 2015-05-22 11:53:10 PDT
Comment on attachment 253596 [details] Proposed patch. View in context: https://bugs.webkit.org/attachment.cgi?id=253596&action=review > Source/WebCore/platform/graphics/avfoundation/objc/MediaPlaybackTargetPickerMac.mm:-173 > - [m_outputDeviceMenuController removeObserver:m_outputDeviceMenuControllerDelegate.get() forKeyPath:externalOutputDevicePickedKeyName]; How do these observers get removed when the target picker goes away? I guess the point of this patch is to keep this object alive for as long as WebKit is running?
Eric Carlson
Comment 5 2015-05-22 12:08:30 PDT
(In reply to comment #4) > Comment on attachment 253596 [details] > Proposed patch. > > View in context: > https://bugs.webkit.org/attachment.cgi?id=253596&action=review > > > Source/WebCore/platform/graphics/avfoundation/objc/MediaPlaybackTargetPickerMac.mm:-173 > > - [m_outputDeviceMenuController removeObserver:m_outputDeviceMenuControllerDelegate.get() forKeyPath:externalOutputDevicePickedKeyName]; > > How do these observers get removed when the target picker goes away? I guess > the point of this patch is to keep this object alive for as long as WebKit > is running? They don't. This technically isn't a problem because this is a singleton, but I will add that code to the destructor for completeness.
Eric Carlson
Comment 6 2015-05-22 12:15:55 PDT
Note You need to log in before you can comment on or make changes to this bug.